fixed foundation icons on Safari

--- a/app/assets/stylesheets/layout_enhancements.css.scss
+++ b/app/assets/stylesheets/layout_enhancements.css.scss
@@ -80,3 +80,7 @@ a.account-top-bar {
     vertical-align: middle;
   }
 }
+
+i[class*="fi-"] {
+  display: inline-block;
+}
